--- a/src/input/root/feeds/articles.atom.njk
+++ b/src/input/root/feeds/articles.atom.njk
@@ -7,8 +7,8 @@ permalink: "articles.atom"
 	<subtitle>{{ metadata.description }}</subtitle>
 	<link href="{{ '/articles.atom' | absoluteUrl(metadata.url) }}" rel="self"/>
 	<link href="{{ metadata.url }}"/>
-	<updated>{{ collections.blog | getNewestCollectionItemDate | dateToRfc3339 }}</updated>
-	<id>{{ metadata.url }}</id>
+	<updated>{{ collections.BlogSortedByDate | getLatestCollectionItemDate | dateToRfc3339 }}</updated>
+	<id>{{ metadata.url }}/</id>
 	<author>
 		<name>{{ metadata.author.name }}</name>
 		<email>{{ metadata.author.email }}</email>
@@ -18,7 +18,20 @@ permalink: "articles.atom"
 		<entry>
 			<title>{{ post.data.title }}</title>
 			<link href="{{ absolutePostUrl }}"/>
-			<updated>{{ post.date | dateToRfc3339 }}</updated>
+			<published>
+				{%- if post.data.created -%}
+				{{ post.data.created | dateObj | dateToRfc3339 }}
+				{%- else -%}
+				{{ post.data.date | dateObj | dateToRfc3339 }}
+				{%- endif -%}
+			</published>
+			<updated>
+				{%- if post.data.modified -%}
+				{{ post.data.modified | dateObj | dateToRfc3339 }}
+				{%- else -%}
+				{{ post.data.date | dateObj | dateToRfc3339 }}
+				{%- endif -%}
+			</updated>
 			<id>{{ absolutePostUrl }}</id>
 			<content xml:lang="{{ metadata.lang }}" type="html">{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}</content>
 		</entry>
