--- a/src/input/root/feeds/bookmarks.atom.njk
+++ b/src/input/root/feeds/bookmarks.atom.njk
@@ -7,8 +7,8 @@ permalink: "bookmarks.atom"
 	<subtitle>{{ metadata.description }}</subtitle>
 	<link href="{{ '/bookmarks.atom' | absoluteUrl(metadata.url) }}" rel="self"/>
 	<link href="{{ metadata.url }}"/>
-	<updated>{{ bookmarks.newestItemDate | dateToRfc3339 }}</updated>
-	<id>{{ metadata.url }}</id>
+	<updated>{{ bookmarks.newestItemDate | dateObj | dateToRfc3339 }}</updated>
+	<id>{{ metadata.url }}/</id>
 	<author>
 		<name>{{ metadata.author.name }}</name>
 		<email>{{ metadata.author.email }}</email>
@@ -18,9 +18,13 @@ permalink: "bookmarks.atom"
 			<title>{{ bookmark.title }}</title>
 			<link href="{{ bookmark.link }}"/>
 			<published>{{ bookmark.created | dateObj | dateToRfc3339 }}</published>
-			{%- if bookmark.modified -%}
-				<updated>{{ bookmark.modified | dateObj | dateToRfc3339 }}</updated>
-			{%- endif -%}
+			<updated>
+				{%- if bookmark.modified -%}
+				{{ bookmark.modified | dateObj | dateToRfc3339 }}
+				{%- else -%}
+				{{ bookmark.created | dateObj | dateToRfc3339 }}
+				{%- endif -%}
+			</updated>
 			<id>{{ bookmark.link }}</id>
 			<content xml:lang="{{ metadata.lang }}" type="html">{{ bookmark.excerpt }}</content>
 		</entry>
