--- a/src/input/root/feeds/bookmarks.rss.njk
+++ b/src/input/root/feeds/bookmarks.rss.njk
@@ -9,15 +9,19 @@ permalink: "bookmarks.rss"
 		<atom:link href="{{ '/bookmarks.rss' | absoluteUrl(metadata.url) }}" rel="self" type="application/rss+xml"/>
 		<description>{{ metadata.description }}</description>
 		<language>{{ metadata.lang }}</language>
+		<lastBuildDate>{{ bookmarks.newestItemDate | dateObj | dateToRfc822 }}</lastBuildDate>
 		{%- for bookmark in bookmarks.items %}
 			<item>
 				<title>{{ bookmark.title }}</title>
 				<link>{{ bookmark.link }}</link>
 				<description>{{ bookmark.excerpt }}</description>
-				<pubDate>{{ bookmark.created | dateObj | dateToRfc822 }}</pubDate>
-				{%- if bookmark.modified -%}
-					<lastBuildDate>{{ bookmark.modified | dateObj | dateToRfc822 }}</lastBuildDate>
-				{%- endif -%}
+				<pubDate>
+					{%- if bookmark.modified -%}
+					{{ bookmark.modified | dateObj | dateToRfc822 }}
+					{%- else -%}
+					{{ bookmark.created | dateObj | dateToRfc822 }}
+					{%- endif -%}
+				</pubDate>
 				<dc:creator>{{ metadata.author.name }}</dc:creator>
 				<guid>{{ bookmark.link }}</guid>
 			</item>
