--- a/src/input/root/feeds/feed.atom.njk
+++ b/src/input/root/feeds/feed.atom.njk
@@ -7,18 +7,31 @@ permalink: "feed.atom"
 	<subtitle>{{ metadata.description }}</subtitle>
 	<link href="{{ '/feed.atom' | absoluteUrl(metadata.url) }}" rel="self"/>
 	<link href="{{ metadata.url }}"/>
-	<updated>{{ collections.allSortedByDate | getNewestCollectionItemDate | dateToRfc3339 }}</updated>
-	<id>{{ metadata.url }}</id>
+	<updated>{{ collections.postsSortedByDate | getLatestCollectionItemDate | dateToRfc3339 }}</updated>
+	<id>{{ metadata.url }}/</id>
 	<author>
 		<name>{{ metadata.author.name }}</name>
 		<email>{{ metadata.author.email }}</email>
 	</author>
-	{%- for post in collections.allSortedByDate %}
+	{%- for post in collections.postsSortedByDate %}
 		{%- set absolutePostUrl = post.url | absoluteUrl(metadata.url) %}
 		<entry>
 			<title>{{ post.data.title }}</title>
 			<link href="{{ absolutePostUrl }}"/>
-			<updated>{{ post.date | dateToRfc3339 }}</updated>
+			<published>
+				{%- if post.data.created -%}
+				{{ post.data.created | dateObj | dateToRfc3339 }}
+				{%- else -%}
+				{{ post.data.date | dateObj | dateToRfc3339 }}
+				{%- endif -%}
+			</published>
+			<updated>
+				{%- if post.data.modified -%}
+				{{ post.data.modified | dateObj | dateToRfc3339 }}
+				{%- else -%}
+				{{ post.data.date | dateObj | dateToRfc3339 }}
+				{%- endif -%}
+			</updated>
 			<id>{{ absolutePostUrl }}</id>
 			<content xml:lang="{{ metadata.lang }}" type="html">{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}</content>
 		</entry>
