--- a/src/input/css/style.css
+++ b/src/input/css/style.css
@@ -50,6 +50,7 @@
 @import url("./blocks/icon.css") layer(blocks);
 @import url("./blocks/key-skills.css") layer(blocks);
 @import url("./blocks/lego.css") layer(blocks);
+@import url("./blocks/lite-youtube.css") layer(blocks);
 @import url("./blocks/logo.css") layer(blocks);
 @import url("./blocks/markdown-container.css") layer(blocks);
 @import url("./blocks/nav.css") layer(blocks);
