--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -11,7 +11,9 @@ layout: base-without-header.njk
 			<img class="[ u-photo ]" src="/assets/img/pfp.jpg" alt='A digital drawing of me a white woman with blonde hair, smiling and doing a peace sign, wearing a white "golf le fleur" jumper.' hidden>
 		{%- endif -%}
 		<a class="[ u-url ]" href="{{ page.url }}" hidden></a>
-		<a rel="syndication" class="[ u-syndication ]" {% if syndication-url %}href="{{ syndication-url }}"{% endif %} hidden></a>
+		{% if syndication-url %}
+			<a rel="syndication" class="[ u-syndication ]" href="{{ syndication-url }}" hidden></a>
+		{% endif %}
 		<a href="https://brid.gy/publish/mastodon" hidden></a>
 		{%- if created -%}
 			{%- set date = created -%}
