🐛 fix: fixing dumb shit

--- a/src/_layouts/og.njk
+++ b/src/_layouts/og.njk
@@ -76,7 +76,7 @@
 				mix-blend-mode: lighten;
 			}
 		</style>
-		<link rel="stylesheet" href="/assets/css/fonts.css">
+		<link rel="stylesheet" href="/css/fonts.css">
 		{%- rollup "src/input/js/css-doodle.js" | url -%}
 	</head>
 	<body>
