🧹 chore: switching to a different screenshotting service

--- a/src/_includes/meta.njk
+++ b/src/_includes/meta.njk
@@ -29,10 +29,10 @@
 <meta property="og:url" content="{{ absolutePageUrl }}">
 <meta property="og:locale" content="{{ metadata.locale }}">
 <meta name="twitter:card" content="summary_large_image">
-<meta property="twitter:image" content="https://v1.screenshot.11ty.dev/https%3A%2F%2Fellyloel.com%2Fog{{ ogUrl | urlencode }}/opengraph/">
-<meta property="og:image" content="https://v1.screenshot.11ty.dev/https%3A%2F%2Fellyloel.com%2Fog{{ ogUrl | urlencode }}/opengraph/">
-<meta name="og:image" content="https://v1.screenshot.11ty.dev/https%3A%2F%2Fellyloel.com%2Fog{{ ogUrl | urlencode }}/opengraph/">
-<meta name="og:image:secure_url" content="https://v1.screenshot.11ty.dev/https%3A%2F%2Fellyloel.com%2Fog{{ ogUrl | urlencode }}/opengraph/">
+<meta property="twitter:image" content="https://api.microlink.io/?url=https://ellyloel.com/og{{ ogUrl }}&screenshot=true&meta=false&embed=screenshot.url">
+<meta property="og:image" content="https://api.microlink.io/?url=https://ellyloel.com/og{{ ogUrl }}&screenshot=true&meta=false&embed=screenshot.url">
+<meta name="og:image" content="https://api.microlink.io/?url=https://ellyloel.com/og{{ ogUrl }}&screenshot=true&meta=false&embed=screenshot.url">
+<meta name="og:image:secure_url" content="https://api.microlink.io/?url=https://ellyloel.com/og{{ ogUrl }}&screenshot=true&meta=false&embed=screenshot.url">
 <meta property="og:image:alt" content="A background of curved purple lines with the text “{{ text }}” ontop, Elly's logo is in the bottom right corner.">
 
 {# Icons #}
