--- a/src/input/root/feeds/feed.rss.njk
+++ b/src/input/root/feeds/feed.rss.njk
@@ -15,7 +15,10 @@ permalink: "feed.rss"
 			<item>
 				<title>{{ post.data.title }}</title>
 				<link>{{ absolutePostUrl }}</link>
-				<description>{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}</description>
+				<description>
+					{%- include "hidden-microformats.njk" -%}
+					{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) | safe }}
+				</description>
 				<pubDate>{{ post.data.date | dateObj | dateToRfc822 }}</pubDate>
 				<dc:creator>{{ metadata.author.name }}</dc:creator>
 				<guid>{{ absolutePostUrl }}</guid>
