--- a/src/_includes/hidden-microformats.njk
+++ b/src/_includes/hidden-microformats.njk
@@ -1,9 +1,14 @@
+{%- if page.url === "/feed.rss" -%}
+	{%- set link = absolutePostUrl -%}
+{%- else -%}
+	{%- set link = page.url -%}
+{%- endif -%}
 <a rel="author" class="[ h-card p-author ]" href="https://ellyloel.com" hidden="">Elly Loel</a>
 {%- set regExp = r/^\/bookmarks\/.+\// -%}
-{%- if not regExp.test(page.url) -%}
+{%- if not regExp.test(link) -%}
 	<img class="[ u-photo ]" src="/assets/img/pfp.jpg" alt='A digital drawing of me a white woman with blonde hair, smiling and doing a peace sign, wearing a white "golf le fleur" jumper.' hidden="">
 {%- endif -%}
-<a class="[ u-url ]" href="{{ page.url }}" hidden=""></a>
+<a class="[ u-url ]" href="{{ link }}" hidden=""></a>
 {% if syndication-url %}
 	<a rel="syndication" class="[ u-syndication ]" href="{{ syndication-url }}" hidden=""></a>
 {% endif %}
@@ -12,4 +17,4 @@
 	{%- if bookmark.link -%}
 		<br>🔖 {{ bookmark.link }}
 	{%- endif -%}
-	<br>🔗 {{ page.url }}</p>
+	<br>🔗 {{ link }}</p>
