--- a/src/input/root/feeds/bookmarks.atom.njk
+++ b/src/input/root/feeds/bookmarks.atom.njk
@@ -26,7 +26,7 @@ permalink: "bookmarks.atom"
 				{%- endif -%}
 			</updated>
 			<id>{{ bookmark.link }}</id>
-			<content xml:lang="{{ metadata.lang }}" type="html">{{ bookmark.excerpt | md | safe }}</content>
+			<content xml:lang="{{ metadata.lang }}" type="html">{{ bookmark.excerpt | md }}</content>
 		</entry>
 	{%- endfor %}
 </feed>
