🐛 fix: fixing dump mistakes

--- a/src/_includes/hidden-microformats.njk
+++ b/src/_includes/hidden-microformats.njk
@@ -1,4 +1,4 @@
-{%- if page.url === "/feed.rss" -%}
+{%- if page.url === "/feed.atom" -%}
 	{%- set link = absolutePostUrl -%}
 {%- else -%}
 	{%- set link = page.url -%}
