--- a/src/input/root/feeds/feed.atom.njk
+++ b/src/input/root/feeds/feed.atom.njk
@@ -20,20 +20,23 @@ permalink: "feed.atom"
 			<link href="{{ absolutePostUrl }}"/>
 			<published>
 				{%- if post.data.created -%}
-				{{ post.data.created | dateObj | dateToRfc3339 }}
+					{{ post.data.created | dateObj | dateToRfc3339 }}
 				{%- else -%}
-				{{ post.data.date | dateObj | dateToRfc3339 }}
+					{{ post.data.date | dateObj | dateToRfc3339 }}
 				{%- endif -%}
 			</published>
 			<updated>
 				{%- if post.data.modified -%}
-				{{ post.data.modified | dateObj | dateToRfc3339 }}
+					{{ post.data.modified | dateObj | dateToRfc3339 }}
 				{%- else -%}
-				{{ post.data.date | dateObj | dateToRfc3339 }}
+					{{ post.data.date | dateObj | dateToRfc3339 }}
 				{%- endif -%}
 			</updated>
 			<id>{{ absolutePostUrl }}</id>
-			<content xml:lang="{{ metadata.lang }}" type="html">{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}</content>
+			<content xml:lang="{{ metadata.lang }}" type="html">
+				{%- include "hidden-microformats.njk" -%}
+				{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}
+			</content>
 		</entry>
 	{%- endfor %}
 </feed>
