🐛 fix: omitting bridgy added link

--- a/src/input/root/feeds/feed.atom.njk
+++ b/src/input/root/feeds/feed.atom.njk
@@ -35,9 +35,16 @@ permalink: "feed.atom"
 			<id>{{ absolutePostUrl }}</id>
 			<content xml:lang="{{ metadata.lang }}" type="html">
 				{%- filter escape -%}
-					{%- include "hidden-microformats.njk" -%}
-				{%- endfilter -%}
-				{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}
+					{%- filter escape -%}
+						<a href="https://brid.gy/publish/mastodon" class="p-bridgy-omit-link" hidden=""></a>
+						<p class="p-bridgy-mastodon-content" hidden="">{{ post.data.title }}
+							{%- if post.data.bookmark.link -%}
+								<br>🔖 {{ post.data.bookmark.link }}
+							{%- endif -%}
+							<br>🔗 {{ absolutePostUrl }}</p>
+					{%- endfilter -%}
+				{%- endfilter %}
+				{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) | escape }}
 			</content>
 		</entry>
 	{%- endfor %}
