--- a/src/_includes/hidden-microformats.njk
+++ b/src/_includes/hidden-microformats.njk
@@ -1,9 +1,20 @@
+{%- if page.url === "/feed.atom" -%}
+	{%- set link = absolutePostUrl -%}
+{%- else -%}
+	{%- set link = page.url | absoluteUrl(metadata.url) -%}
+{%- endif -%}
 <a rel="author" class="[ h-card p-author ]" href="https://ellyloel.com" hidden="">Elly Loel</a>
 {%- set regExp = r/^\/bookmarks\/.+\// -%}
-{%- if not regExp.test(page.url) -%}
+{%- if not regExp.test(link) -%}
 	<img class="[ u-photo ]" src="/assets/img/pfp.jpg" alt='A digital drawing of me a white woman with blonde hair, smiling and doing a peace sign, wearing a white "golf le fleur" jumper.' hidden="">
 {%- endif -%}
-<a class="[ u-url ]" href="{{ page.url }}" hidden=""></a>
+<a class="[ u-url ]" href="{{ link }}" hidden=""></a>
 {% if syndication-url %}
 	<a rel="syndication" class="[ u-syndication ]" href="{{ syndication-url }}" hidden=""></a>
 {% endif %}
+<a href="https://brid.gy/publish/mastodon" class="p-bridgy-omit-link" hidden=""></a>
+<p class="p-bridgy-mastodon-content" hidden="">{{ title }}
+	{%- if bookmark.link -%}
+		<br>🔖 {{ bookmark.link }}
+	{%- endif -%}
+	<br>🔗 {{ link }}</p>
