--- a/src/_includes/feedItem.njk
+++ b/src/_includes/feedItem.njk
@@ -27,7 +27,7 @@
 			{%- if tags and tags.length !== 0 -%}
 				<span class="[ flex flex-wrap align-center gap-1 ]">
 					<sl-tooltip content="Tags">
-						<sl-icon class="[ icon ]" library="fa" name="fas-tag" label="Tags"></sl-icon>
+						<sl-icon class="[ inline-icon ]" library="fa" name="fas-tag" label="Tags"></sl-icon>
 					</sl-tooltip>
 					{%- include "tags.njk" -%}
 				</span>
