--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -7,7 +7,7 @@
 					<details-utils close-esc close-click-outside>
 						<details>
 							<summary>
-								<sl-icon class="[ icon ]" library="fa" name="fas-play" label=""></sl-icon>
+								<sl-icon class="[ inline-icon ]" library="fa" name="fas-play" label=""></sl-icon>
 								{{ entry.title }}
 							</summary>
 							<ul role="list">
