--- a/src/_includes/stage.njk
+++ b/src/_includes/stage.njk
@@ -8,6 +8,6 @@
 
 <span>
 	<sl-tooltip content="{{ stage | title }}">
-		<sl-icon class="[ icon ]" library="fa" name="fas-{{ icon }}" label="{{ stage | title }}"></sl-icon>
+		<sl-icon class="[ inline-icon ]" library="fa" name="fas-{{ icon }}" label="{{ stage | title }}"></sl-icon>
 	</sl-tooltip>
 </span>
