--- a/src/input/css/global.css
+++ b/src/input/css/global.css
@@ -2,13 +2,11 @@
 html {
 	--link: var(--accent-solid);
 	--link-visited: var(--accent-solid-hover);
-	--scrollthumb-color: var(--neutral-border);
 
 	accent-color: var(--link);
 	background-color: var(--neutral-base);
 	caret-color: var(--link);
 	color: var(--neutral-text);
-	scrollbar-color: var(--scrollthumb-color) transparent;
 }
 
 body {
@@ -421,26 +419,6 @@ details[open] > summary {
 			border-bottom-left-radius: 0 !important;
 			border-bottom-right-radius: 0 !important;
 		}
-
-		scrollbar-color: var(--accent-bg) var(--accent-4); /* scroll thumb and track */
-
-		/* Firefox */
-		scrollbar-width: auto; /* "auto" or "thin" */
-
-		/* Chrome, Edge, and Safari */
-		&::-webkit-scrollbar {
-			width: auto; /* width of the entire scrollbar */
-		}
-
-		&::-webkit-scrollbar-track {
-			background: var(--accent-4); /* color of the tracking area */
-		}
-
-		&::-webkit-scrollbar-thumb {
-			background-color: var(--accent-bg); /* color of the scroll thumb */
-			border: 3px solid var(--accent-4); /* creates padding around scroll thumb */
-			border-radius: 20px; /* roundness of the scroll thumb */
-		}
 	}
 
 	& table {
@@ -652,6 +630,7 @@ dialog::backdrop {
 html[\:has\(dialog\[open\]\)],
 html:has(dialog[open]) {
 	overflow: hidden;
+	padding-inline-end: var(--scrollbar-width);
 }
 
 menu {
