--- a/src/_includes/meta.njk
+++ b/src/_includes/meta.njk
@@ -18,9 +18,9 @@
 <meta name="generator" content="{{ eleventy.generator }}">
 
 {# Style #}
-<meta name="color-scheme" content="dark light">
-<meta name="theme-color" media="(prefers-color-scheme: light)" content="#bd93f9">
-<meta name="theme-color" media="(prefers-color-scheme: dark)" content="#5a1c93">
+<meta name="color-scheme" content="light dark">
+<meta name="theme-color" media="(prefers-color-scheme: light)" content="#f9f9f9">
+<meta name="theme-color" media="(prefers-color-scheme: dark)" content="#111111">
 
 {# Open Graph #}
 <meta property="og:site_name" content="{{ metadata.title }}">
