--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -36,35 +36,35 @@ eleventyImport:
 						</summary>
 						<ul role="list" class="[ flow ]">
 							<li>
-								<sl-icon class="[ icon ]" library="fa" name="fab-html5"></sl-icon>
+								<sl-icon class="[ inline-icon ]" library="fa" name="fab-html5"></sl-icon>
 								<abbr title="HyperText Markup Language">HTML</abbr>
 							</li>
 							<li>
-								<sl-icon class="[ icon ]" library="fa" name="fab-css3-alt"></sl-icon>
+								<sl-icon class="[ inline-icon ]" library="fa" name="fab-css3-alt"></sl-icon>
 								<abbr title="Cascading Style Sheets">CSS</abbr>
 							</li>
 							<li>
-								<sl-icon class="[ icon ]" library="fa" name="fas-universal-access"></sl-icon>
+								<sl-icon class="[ inline-icon ]" library="fa" name="fas-universal-access"></sl-icon>
 								<abbr title="Accessibility">A11y</abbr>
 							</li>
 							<li>
-								<sl-icon class="[ icon ]" library="fa" name="fas-pen-nib"></sl-icon>
+								<sl-icon class="[ inline-icon ]" library="fa" name="fas-pen-nib"></sl-icon>
 								<abbr title="Scalable Vector Graphics">SVG</abbr>
 							</li>
 							<li>
-								<sl-icon class="[ icon ]" library="fa" name="fas-code"></sl-icon>
+								<sl-icon class="[ inline-icon ]" library="fa" name="fas-code"></sl-icon>
 								Web Standards
 							</li>
 							<li>
-								<sl-icon class="[ icon ]" library="fa" name="fas-gears"></sl-icon>
+								<sl-icon class="[ inline-icon ]" library="fa" name="fas-gears"></sl-icon>
 								Design Tokens
 							</li>
 							<li>
-								<sl-icon class="[ icon ]" library="fa" name="fas-cubes"></sl-icon>
+								<sl-icon class="[ inline-icon ]" library="fa" name="fas-cubes"></sl-icon>
 								Design Systems
 							</li>
 							<li>
-								<sl-icon class="[ icon ]" library="fa" name="fas-cube"></sl-icon>
+								<sl-icon class="[ inline-icon ]" library="fa" name="fas-cube"></sl-icon>
 								Web Components
 							</li>
 						</ul>
@@ -96,7 +96,7 @@ eleventyImport:
 			<ul class="[ social-links ][ flow ]">
 				<li>
 					<a href="https://twitter.ellyloel.com" rel="me" class="[ u-url ][ text-decoration-none move-link-styling-to-child ]">
-						<sl-icon class="[ icon ]" library="fa" name="fab-twitter"></sl-icon>
+						<sl-icon class="[ inline-icon ]" library="fa" name="fab-twitter"></sl-icon>
 						<del datetime="2022-11-18" cite="https://twitter.ellyloel.com/1593505830347100160/">
 							<span>Twitter</span>
 						</del>
@@ -104,7 +104,7 @@ eleventyImport:
 				</li>
 				<li>
 					<a href="https://front-end.social/@elly" rel="me" class="[ u-url ][ text-decoration-none move-link-styling-to-child ]">
-						<sl-icon class="[ icon ]" library="fa" name="fab-mastodon"></sl-icon>
+						<sl-icon class="[ inline-icon ]" library="fa" name="fab-mastodon"></sl-icon>
 						<ins datetime="2022-11-18" cite="https://twitter.ellyloel.com/1593505830347100160/">
 							<span>Mastodon</span>
 						</ins>
@@ -112,19 +112,19 @@ eleventyImport:
 				</li>
 				<li>
 					<a href="https://elly.to/ama" rel="me" class="[ u-url ][ text-decoration-none move-link-styling-to-child ]">
-						<sl-icon class="[ icon ]" library="fa" name="far-circle-question"></sl-icon>
+						<sl-icon class="[ inline-icon ]" library="fa" name="far-circle-question"></sl-icon>
 						<span>Ask me anything</span>
 					</a>
 				</li>
 				<li>
 					<a href="https://elly.to/codepen" rel="me" class="[ u-url ][ text-decoration-none move-link-styling-to-child ]">
-						<sl-icon class="[ icon ]" library="fa" name="fab-codepen"></sl-icon>
+						<sl-icon class="[ inline-icon ]" library="fa" name="fab-codepen"></sl-icon>
 						<span>Codepen</span>
 					</a>
 				</li>
 				<li>
 					<a href="https://elly.to/linkedin" rel="me" class="[ u-url ][ text-decoration-none move-link-styling-to-child ]">
-						<sl-icon class="[ icon ]" library="fa" name="fab-linkedin"></sl-icon>
+						<sl-icon class="[ inline-icon ]" library="fa" name="fab-linkedin"></sl-icon>
 						<span>LinkedIn</span>
 					</a>
 				</li>
