--- a/src/input/content/pages/mastodon.njk
+++ b/src/input/content/pages/mastodon.njk
@@ -50,7 +50,7 @@ eleventyNavigation:
 				<div slot="footer" class="[ flex align-center ]">
 					<sl-tooltip content="Posted on {{ post.isoDate | dateToLocaleDateFull }}">
 						<span class="[ flex align-center gap-1ch ]">
-							<sl-icon class="[ icon ]" library="fa" name="far-calendar" label="Posted on {{ post.isoDate | dateToLocaleDateFull }}"></sl-icon>
+							<sl-icon class="[ inline-icon ]" library="fa" name="far-calendar" label="Posted on {{ post.isoDate | dateToLocaleDateFull }}"></sl-icon>
 							<a href="{{ post.link }}" class="[ u-url u-syndication ]" rel="syndication">
 								<time class="[ dt-published ]" datetime="{{ post.isoDate }}" style="line-height: 1;">{{ post.isoDate | dateToRelative }}</time>
 							</a>
