--- a/src/input/css/shoelace.css
+++ b/src/input/css/shoelace.css
@@ -33,11 +33,11 @@
 	--sl-border-radius-pill: 9999px;
 
 	/* Elevations */
-	--sl-shadow-x-small: 0 1px 2px hsl(240deg 3.8% 46.1% / 6%);
-	--sl-shadow-small: 0 1px 2px hsl(240deg 3.8% 46.1% / 12%);
-	--sl-shadow-medium: 0 2px 4px hsl(240deg 3.8% 46.1% / 12%);
-	--sl-shadow-large: 0 2px 8px hsl(240deg 3.8% 46.1% / 12%);
-	--sl-shadow-x-large: 0 4px 16px hsl(240deg 3.8% 46.1% / 12%);
+	--sl-shadow-x-small: 0 1px 2px hsl(var(--hue) 3.8% 46.1% / 6%);
+	--sl-shadow-small: 0 1px 2px hsl(var(--hue) 3.8% 46.1% / 12%);
+	--sl-shadow-medium: 0 2px 4px hsl(var(--hue) 3.8% 46.1% / 12%);
+	--sl-shadow-large: 0 2px 8px hsl(var(--hue) 3.8% 46.1% / 12%);
+	--sl-shadow-x-large: 0 4px 16px hsl(var(--hue) 3.8% 46.1% / 12%);
 
 	/* Spacings */
 	--sl-spacing-3x-small: 0.125rem; /* 2px */
@@ -176,7 +176,7 @@
 	--sl-toggle-size: 1rem;
 
 	/* Overlays */
-	--sl-overlay-background-color: hsl(240deg 3.8% 46.1% / 33%);
+	--sl-overlay-background-color: hsl(var(--hue) 3.8% 46.1% / 33%);
 
 	/* Panels */
 	--sl-panel-background-color: var(--sl-color-neutral-0);
@@ -201,9 +201,6 @@
 	--sl-z-index-toast: 950;
 	--sl-z-index-tooltip: 1000;
 
-	/* Light colour scale */
-	color-scheme: light;
-
 	/* Dark colour scale */
 	@media (prefers-color-scheme: dark) {
 		--sl-color-primary-50: var(--black);
@@ -217,7 +214,7 @@
 		--sl-color-primary-800: var(--violet-heaven);
 		--sl-color-primary-900: var(--grape-taffy);
 		--sl-color-primary-950: var(--white);
-		--sl-color-neutral-0: hsl(240deg 5.9% 11%);
+		--sl-color-neutral-0: hsl(var(--hue) 5.9% 11%);
 		--sl-color-neutral-50: var(--black);
 		--sl-color-neutral-100: var(--piano-black);
 		--sl-color-neutral-200: var(--moonless-night);
@@ -246,12 +243,10 @@
 
 		/* Panels */
 		--sl-panel-background-color: var(--sl-color-neutral-50);
-
-		color-scheme: dark;
 	}
 }
 
-[color-scheme="light"] {
+[data-selected-color-scheme="light"] {
 	--sl-color-primary-50: var(--white);
 	--sl-color-primary-100: var(--grape-taffy);
 	--sl-color-primary-200: var(--violet-heaven);
@@ -278,25 +273,23 @@
 	--sl-color-neutral-1000: hsl(0deg 0% 0%);
 
 	/* Elevations */
-	--sl-shadow-x-small: 0 1px 2px hsl(240deg 3.8% 46.1% / 6%);
-	--sl-shadow-small: 0 1px 2px hsl(240deg 3.8% 46.1% / 12%);
-	--sl-shadow-medium: 0 2px 4px hsl(240deg 3.8% 46.1% / 12%);
-	--sl-shadow-large: 0 2px 8px hsl(240deg 3.8% 46.1% / 12%);
-	--sl-shadow-x-large: 0 4px 16px hsl(240deg 3.8% 46.1% / 12%);
+	--sl-shadow-x-small: 0 1px 2px hsl(var(--hue) 3.8% 46.1% / 6%);
+	--sl-shadow-small: 0 1px 2px hsl(var(--hue) 3.8% 46.1% / 12%);
+	--sl-shadow-medium: 0 2px 4px hsl(var(--hue) 3.8% 46.1% / 12%);
+	--sl-shadow-large: 0 2px 8px hsl(var(--hue) 3.8% 46.1% / 12%);
+	--sl-shadow-x-large: 0 4px 16px hsl(var(--hue) 3.8% 46.1% / 12%);
 
 	/* Focus ring */
 	--sl-focus-ring-color: var(--sl-color-primary-600);
 
 	/* Overlays */
-	--sl-overlay-background-color: hsl(240deg 3.8% 46.1% / 33%);
+	--sl-overlay-background-color: hsl(var(--hue) 3.8% 46.1% / 33%);
 
 	/* Panels */
 	--sl-panel-background-color: var(--sl-color-neutral-0);
-
-	color-scheme: light;
 }
 
-[color-scheme="dark"] {
+[data-selected-color-scheme="dark"] {
 	--sl-color-primary-50: var(--black);
 	--sl-color-primary-100: var(--coalmine);
 	--sl-color-primary-200: var(--voldemort);
@@ -308,7 +301,7 @@
 	--sl-color-primary-800: var(--violet-heaven);
 	--sl-color-primary-900: var(--grape-taffy);
 	--sl-color-primary-950: var(--white);
-	--sl-color-neutral-0: hsl(240deg 5.9% 11%);
+	--sl-color-neutral-0: hsl(var(--hue) 5.9% 11%);
 	--sl-color-neutral-50: var(--black);
 	--sl-color-neutral-100: var(--piano-black);
 	--sl-color-neutral-200: var(--moonless-night);
@@ -337,96 +330,4 @@
 
 	/* Panels */
 	--sl-panel-background-color: var(--sl-color-neutral-50);
-
-	color-scheme: dark;
-}
-
-[color-scheme="light-moss"] {
-	--sl-color-primary-50: var(--white);
-	--sl-color-primary-100: var(--fresh-breeze);
-	--sl-color-primary-200: var(--cabbage);
-	--sl-color-primary-300: var(--sereni-teal);
-	--sl-color-primary-400: var(--martian-cerulean);
-	--sl-color-primary-500: var(--illuminati-green);
-	--sl-color-primary-600: var(--toad-king);
-	--sl-color-primary-700: var(--pine-needle);
-	--sl-color-primary-800: var(--eight-ball);
-	--sl-color-primary-900: var(--nightmare);
-	--sl-color-primary-950: var(--black);
-	--sl-color-neutral-0: hsl(0deg 0% 100%);
-	--sl-color-neutral-50: var(--white);
-	--sl-color-neutral-100: var(--serene);
-	--sl-color-neutral-200: var(--foil);
-	--sl-color-neutral-300: var(--pigeon);
-	--sl-color-neutral-400: var(--mother-earth);
-	--sl-color-neutral-500: var(--volcanic-ash);
-	--sl-color-neutral-600: var(--yacht-club);
-	--sl-color-neutral-700: var(--vulcanized);
-	--sl-color-neutral-800: var(--carbon-fiber);
-	--sl-color-neutral-900: var(--matt-black);
-	--sl-color-neutral-950: var(--black);
-	--sl-color-neutral-1000: hsl(0deg 0% 0%);
-
-	/* Elevations */
-	--sl-shadow-x-small: 0 1px 2px hsl(240deg 3.8% 46.1% / 6%);
-	--sl-shadow-small: 0 1px 2px hsl(240deg 3.8% 46.1% / 12%);
-	--sl-shadow-medium: 0 2px 4px hsl(240deg 3.8% 46.1% / 12%);
-	--sl-shadow-large: 0 2px 8px hsl(240deg 3.8% 46.1% / 12%);
-	--sl-shadow-x-large: 0 4px 16px hsl(240deg 3.8% 46.1% / 12%);
-
-	/* Focus ring */
-	--sl-focus-ring-color: var(--sl-color-primary-600);
-
-	/* Overlays */
-	--sl-overlay-background-color: hsl(240deg 3.8% 46.1% / 33%);
-
-	/* Panels */
-	--sl-panel-background-color: var(--sl-color-neutral-0);
-
-	color-scheme: light;
-}
-
-[color-scheme="dark-moss"] {
-	--sl-color-primary-50: var(--black);
-	--sl-color-primary-100: var(--nightmare);
-	--sl-color-primary-200: var(--eight-ball);
-	--sl-color-primary-300: var(--pine-needle);
-	--sl-color-primary-400: var(--toad-king);
-	--sl-color-primary-500: var(--illuminati-green);
-	--sl-color-primary-600: var(--martian-cerulean);
-	--sl-color-primary-700: var(--sereni-teal);
-	--sl-color-primary-800: var(--cabbage);
-	--sl-color-primary-900: var(--fresh-breeze);
-	--sl-color-primary-950: var(--white);
-	--sl-color-neutral-0: hsl(240deg 5.9% 11%);
-	--sl-color-neutral-50: var(--black);
-	--sl-color-neutral-100: var(--matt-black);
-	--sl-color-neutral-200: var(--carbon-fiber);
-	--sl-color-neutral-300: var(--vulcanized);
-	--sl-color-neutral-400: var(--yacht-club);
-	--sl-color-neutral-500: var(--volcanic-ash);
-	--sl-color-neutral-600: var(--mother-earth);
-	--sl-color-neutral-700: var(--pigeon);
-	--sl-color-neutral-800: var(--foil);
-	--sl-color-neutral-900: var(--serene);
-	--sl-color-neutral-950: var(--white);
-	--sl-color-neutral-1000: hsl(0deg 0% 100%);
-
-	/* Elevations */
-	--sl-shadow-x-small: 0 1px 2px rgb(0 0 0 / 18%);
-	--sl-shadow-small: 0 1px 2px rgb(0 0 0 / 24%);
-	--sl-shadow-medium: 0 2px 4px rgb(0 0 0 / 24%);
-	--sl-shadow-large: 0 2px 8px rgb(0 0 0 / 24%);
-	--sl-shadow-x-large: 0 4px 16px rgb(0 0 0 / 24%);
-
-	/* Focus ring */
-	--sl-focus-ring-color: var(--sl-color-primary-700);
-
-	/* Overlays */
-	--sl-overlay-background-color: hsl(0deg 0% 0% / 43%);
-
-	/* Panels */
-	--sl-panel-background-color: var(--sl-color-neutral-50);
-
-	color-scheme: dark;
 }
