--- a/src/input/css/utilities/typography.css
+++ b/src/input/css/utilities/typography.css
@@ -1,9 +1,9 @@
-.margin-0 {
-	margin: 0;
-}
-
 .text-decoration-none {
 	text-decoration: none;
+}
+
+.line-height-1 {
+	line-height: 1;
 }
 
 .move-link-styling-to-child {
