--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,6 +1,6 @@
-<header class="site-head">
-	<div class="[ nav-wrapper ]">
-		<div class="inner">
+<header class="[ site-head ] [ wrapper ]" style="--wrapper-size: 100ch;">
+	<div class="[ inner ]">
+		<div class="[ flex align-center gap-3 ]">
 			<!-- link to home: http://microformats.org/wiki/rel-home -->
 			<a href="/" rel="home" class="[ u-url u-uid ] [ text-decoration-none ]"{% if page.url === "/" %} data-state="active" aria-current="page"{% endif %}>
 				<span class="[ logo ]" aria-hidden="true" title="Elly">
@@ -29,8 +29,8 @@
 				></sl-icon-button>
 			</sl-tooltip>
 			{% include "color-scheme-switcher.njk" %}
-
-			{% include "navigation.njk" %}
 		</div>
+
+		{% include "navigation.njk" %}
 	</div>
 </header>
