--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -1,4 +1,4 @@
-<nav role="navigation" aria-label="Primary" class="[ nav ]">
+<nav aria-label="Primary" class="[ nav ]">
 	{% set navPages = collections.all | eleventyNavigation %}
 	<ul role="list" class="list">
 		{%- for entry in navPages %}
