--- a/src/_includes/color-scheme-switcher.njk
+++ b/src/_includes/color-scheme-switcher.njk
@@ -1,25 +1,29 @@
 <dialog class="[ color-scheme-switcher-dialog ]" inert loading>
 	<div class="[ container ][ flex flex-col gap-3 ]">
+		<h2 class="[ margin-0 line-height-1 ]">Theme editor</h2>
+
 		<button type="button" data-action="close" class="[ padding-1 ]" style="font-size: 1.25rem;">
 			<span class="[ visually-hidden ]">Close</span>
 			{%- icon "fas:xmark" -%}
 		</button>
 
-		<h2 class="[ margin-0 line-height-1 ]">Pick a colour<br>scheme</h2>
-		<div class="[ color-scheme-switcher ][ flex flex-wrap gap-3 ]">
-			<button data-color-scheme="auto" aria-pressed="true">
-				{%- icon "fas:laptop" -%}
-				Auto
-			</button>
-			<button data-color-scheme="light" aria-pressed="false">
-				{%- icon "fas:sun" -%}
-				Light
-			</button>
-			<button data-color-scheme="dark" aria-pressed="false">
-				{%- icon "fas:moon" -%}
-				Dark
-			</button>
-		</div>
+		<fieldset style="border: none;">
+			<legend class="[ h3 line-height-1 margin-block-end-2 ]">Pick a colour scheme</legend>
+			<div class="[ color-scheme-switcher ][ flex flex-wrap gap-3 ]">
+				<button data-color-scheme="auto" aria-pressed="true">
+					{%- icon "fas:laptop" -%}
+					Auto
+				</button>
+				<button data-color-scheme="light" aria-pressed="false">
+					{%- icon "fas:sun" -%}
+					Light
+				</button>
+				<button data-color-scheme="dark" aria-pressed="false">
+					{%- icon "fas:moon" -%}
+					Dark
+				</button>
+			</div>
+		</fieldset>
 
 		<div class="[ flex flex-col gap-2 ]">
 			<label for="theme-hue" class="[ h3 line-height-1 ]">
