--- a/src/input/css/blocks/nav.css
+++ b/src/input/css/blocks/nav.css
@@ -1,11 +1,3 @@
-.nav-wrapper {
-	padding-inline: var(--size-4);
-
-	@media (width >= 1100px) {
-		padding-inline: var(--size-8);
-	}
-}
-
 .nav {
 	font-weight: var(--font-weight-body-bold);
 	line-height: 1;
@@ -36,10 +28,13 @@
 
 			& summary {
 				all: unset;
+				/* stylelint-disable-next-line order/properties-alphabetical-order */
+				align-items: baseline;
 				background-color: transparent;
 				border-radius: var(--radius-2);
 				cursor: pointer;
-				display: block;
+				display: flex;
+				gap: 1ch;
 				margin-left: calc(var(--size-1) * -1);
 				margin-right: calc(var(--size-1) * -1);
 				padding-block: 0;
