--- a/src/input/css/blocks/site-head.css
+++ b/src/input/css/blocks/site-head.css
@@ -2,31 +2,51 @@
 	padding: var(--size-6) 0;
 	z-index: 1;
 
-	& .inner {
-		& > sl-icon-button {
-			--sl-focus-ring: 2px solid var(--link);
+	.inner {
+		> div > button {
+			all: unset;
+			/* stylelint-disable-next-line order/properties-alphabetical-order */
+			align-items: center;
+			background-color: transparent;
+			border-radius: var(--radius-2);
+			color: var(--link);
+			cursor: pointer;
+			display: flex;
+			font-weight: var(--font-weight-body-bold);
+			gap: 1ch;
+			margin-left: calc(var(--size-1) * -1);
+			margin-right: calc(var(--size-1) * -1);
+			outline-offset: 0;
+			padding-block: 0;
+			padding-left: var(--size-1);
+			padding-right: var(--size-1);
+			transition: background-color 200ms var(--ease-2);
 
-			inline-size: fit-content;
+			&:hover {
+				background-color: var(--accent-bg);
+				text-decoration-color: transparent;
+			}
 
-			&::part(base) {
-				color: var(--link);
+			&:active {
+				background-color: var(--accent-bg-hover);
+			}
+
+			&:focus-visible {
+				outline: 2px solid var(--link);
 				outline-offset: 0;
+			}
 
-				&:is(:hover, :focus, :active) {
-					color: var(--link-visited);
-				}
+			&:not(:active):focus-visible {
+				outline-offset: var(--size-1);
+			}
 
+			@media (prefers-reduced-motion: no-preference) {
 				&:focus-visible {
-					outline: 2px solid var(--link);
-					outline-offset: var(--size-1);
-				}
-
-				&:active {
-					outline-offset: 0;
-				}
-
-				@media (prefers-reduced-motion: no-preference) {
 					transition: outline-offset 145ms var(--ease-2);
+				}
+
+				&:not(:active):focus-visible {
+					transition-duration: 0.25s;
 				}
 			}
 		}
