🐛 fix: fixing icon shit

--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -72,8 +72,7 @@ eleventyImport:
 				</details-utils>
 			</li>
 			<li>
-				{% emoji "🏳️‍⚧️" %} I'm an incredibly <span class="[ p-category ]">queer</span> <span class="[ p-category ]">pansexual</span> <span class="[ p-category ]">trans</span> <span class="[ p-gender-identity ]">woman</span>. My pronouns are <a href="https://en.pronouns.page/@ellyloel" class="[ p-pronouns ]">
-					<span class="[ p-pronoun ]">she</span>/<span class="[ p-pronoun ]">her</span></a>.
+				{% emoji "🏳️‍⚧️" %} I'm an incredibly <span class="[ p-category ]">queer</span><span class="[ p-category ]">pansexual</span><span class="[ p-category ]">trans</span><span class="[ p-gender-identity ]">woman</span>. My pronouns are <a href="https://en.pronouns.page/@ellyloel" class="[ p-pronouns ]"><span class="[ p-pronoun ]">she</span>/<span class="[ p-pronoun ]">her</span></a>.
 			</li>
 			<li>
 				{% emoji "🧠" %} I'm an <span class="[ p-category ]">AuDHD</span> (<span class="[ p-category ]">autistic</span> and <a href="/garden/adhd" class="[ p-category ]"><abbr title="Attention Deficit Hyperactivity Disorder">ADHD</abbr></a>) <span class="[ p-category ]">neurodivergent</span>.
@@ -95,36 +94,36 @@ eleventyImport:
 			<h2>Find me on:</h2>
 			<ul class="[ social-links ][ flow ]">
 				<li>
-					<a href="https://twitter.ellyloel.com" rel="me" class="[ u-url ][ text-decoration-none move-link-styling-to-child ]">
-						<sl-icon class="[ inline-icon ]" library="fa" name="fab-twitter"></sl-icon>
+					<a href="https://twitter.ellyloel.com" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
+						{%- inlineIcon "fab:twitter" -%}
 						<del datetime="2022-11-18" cite="https://twitter.ellyloel.com/1593505830347100160/">
 							<span>Twitter</span>
 						</del>
 					</a>
 				</li>
 				<li>
-					<a href="https://front-end.social/@elly" rel="me" class="[ u-url ][ text-decoration-none move-link-styling-to-child ]">
-						<sl-icon class="[ inline-icon ]" library="fa" name="fab-mastodon"></sl-icon>
+					<a href="https://front-end.social/@elly" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
+						{%- inlineIcon "fab:mastodon" -%}
 						<ins datetime="2022-11-18" cite="https://twitter.ellyloel.com/1593505830347100160/">
 							<span>Mastodon</span>
 						</ins>
 					</a>
 				</li>
 				<li>
-					<a href="https://elly.to/ama" rel="me" class="[ u-url ][ text-decoration-none move-link-styling-to-child ]">
-						<sl-icon class="[ inline-icon ]" library="fa" name="far-circle-question"></sl-icon>
+					<a href="https://elly.to/ama" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
+						{%- inlineIcon "far:circle-question" -%}
 						<span>Ask me anything</span>
 					</a>
 				</li>
 				<li>
-					<a href="https://elly.to/codepen" rel="me" class="[ u-url ][ text-decoration-none move-link-styling-to-child ]">
-						<sl-icon class="[ inline-icon ]" library="fa" name="fab-codepen"></sl-icon>
+					<a href="https://elly.to/codepen" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
+						{%- inlineIcon "fab:codepen" -%}
 						<span>Codepen</span>
 					</a>
 				</li>
 				<li>
-					<a href="https://elly.to/linkedin" rel="me" class="[ u-url ][ text-decoration-none move-link-styling-to-child ]">
-						<sl-icon class="[ inline-icon ]" library="fa" name="fab-linkedin"></sl-icon>
+					<a href="https://elly.to/linkedin" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
+						{%- inlineIcon "fab:linkedin" -%}
 						<span>LinkedIn</span>
 					</a>
 				</li>
