--- a/src/input/css/blocks/icon.css
+++ b/src/input/css/blocks/icon.css
@@ -2,16 +2,17 @@
 	height: 1em;
 	pointer-events: none;
 	width: 1em;
-
-	> path {
-		fill: currentcolor;
-	}
 }
 
 .inline-icon {
 	display: inline-block;
 	height: 1em;
 	margin: 0 0.05em 0 0.1em;
+	pointer-events: none;
 	vertical-align: -0.15em;
 	width: 1em;
+}
+
+:is(.icon, .inline-icon) > path {
+	fill: currentcolor;
 }
