--- a/src/input/css/blocks/nav.css
+++ b/src/input/css/blocks/nav.css
@@ -34,7 +34,7 @@
 				border-radius: var(--radius-2);
 				cursor: pointer;
 				display: flex;
-				gap: 1ch;
+				gap: 0.75ch;
 				margin-left: calc(var(--size-1) * -1);
 				margin-right: calc(var(--size-1) * -1);
 				padding-block: 0;
@@ -70,7 +70,7 @@
 					}
 				}
 
-				& sl-icon {
+				& .icon {
 					color: var(--accent-solid);
 					font-size: 0.8em;
 					transition: transform 300ms var(--ease-out-4);
@@ -87,7 +87,7 @@
 				background-color: var(--accent-bg);
 				margin-block-end: 0;
 
-				& sl-icon {
+				& .icon {
 					transform: rotate(90deg);
 				}
 			}
